Modified to reflect changed tournament type