@@ -2,12 +2,10 @@ package com.ecosystem.backend.service;
 
 import com.ecosystem.backend.models.Tournament;
 import com.ecosystem.backend.models.Tournaments;
-import com.ecosystem.backend.models.User;
 import com.ecosystem.backend.repository.TournamentRepo;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 @Service
 @AllArgsConstructor
@@ -28,13 +26,10 @@ public class TournamentService {
                     "-",
                     0
             );
-            List<Tournament> defaultList = Arrays.asList(defaultTournament);
-            System.out.println(defaultList);
-            return new Tournaments(defaultList.toArray(new Tournament[0]));
+            return new Tournaments(List.of(defaultTournament));
         }
 
-
-        return new Tournaments(list.toArray(new Tournament[0]));
+        return new Tournaments(list);
     }
 
     public Tournament findTournamentByName(String tournamentName){
